# game

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.txt
engine/: CMakeLists.txt
engine/include/: engine.h
engine/include/core/: gameobject.h  update.h
engine/include/core/ecs/: position.h  renderable.h
engine/include/graphics/: renderer.h  window.h
engine/src/: engine.cpp  main.cpp
engine/src/core/: CMakeLists.txt  gameobject.cpp  update.cpp
engine/src/graphics/: CMakeLists.txt  renderer.cpp  window.cpp
